--- a/frontend/package.json
+++ b/frontend/package.json
@@ -79,6 +79,7 @@
   },
   "dependencies": {
     "autobind-decorator": "^1.3.3",
+    "axios": "^0.13.1",
     "classnames": "^2.2.5",
     "isomorphic-fetch": "^2.2.1",
     "json-server": "0.8.10",
