--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "start": "better-npm-run start",
     "start:ssr": "better-npm-run start:ssr",
+    "prod": "better-npm-run prod",
     "build:dev": "webpack --config scripts/webpack.config.dev.js",
     "build:prod": "webpack --config scripts/webpack.config.prod.js",
     "api": "better-npm-run api",
@@ -18,6 +19,15 @@
       "env": {
         "hot": true,
         "NODE_ENV": "development",
+        "SSR": true,
+        "SERVER_LOAD_DATA": true
+      }
+    },
+    "prod": {
+      "command": "concurrent --kill-others  \"better-npm-run dev-server\" \"better-npm-run api\" --names \"dev-server,api\" --prefix name",
+      "env": {
+        "hot": false,
+        "NODE_ENV": "production",
         "SSR": true,
         "SERVER_LOAD_DATA": true
       }
