--- a/frontend/package.json
+++ b/frontend/package.json
@@ -113,6 +113,7 @@
     "react-router": "^2.0.1",
     "react-router-bootstrap": "^0.23.0",
     "react-router-redux": "^4.0.0",
+    "react-youtube": "^7.0.1",
     "readable-fractions": "0.0.3",
     "redbox-react": "^1.2.2",
     "redux": "^3.3.1",
