--- a/frontend/package.json
+++ b/frontend/package.json
@@ -100,10 +100,12 @@
     "autobind-decorator": "^1.3.3",
     "axios": "^0.13.1",
     "classnames": "^2.2.5",
+    "install": "^0.8.1",
     "isomorphic-fetch": "^2.2.1",
     "json-server": "0.8.10",
     "lodash": "^4.12.0",
     "normalize.css": "^4.1.1",
+    "oauth-1.0a": "^1.0.1",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.0",
     "react-dom": "^15.1.0",
@@ -121,6 +123,7 @@
     "redux-form": "6.0.1",
     "redux-loading": "^1.0.2",
     "redux-thunk": "^2.0.1",
-    "serialize-javascript": "^1.2.0"
+    "serialize-javascript": "^1.2.0",
+    "youtube-api-search": "0.0.5"
   }
 }
