--- a/frontend/package.json
+++ b/frontend/package.json
@@ -104,6 +104,7 @@
     "isomorphic-fetch": "^2.2.1",
     "json-server": "0.8.10",
     "lodash": "^4.12.0",
+    "moment": "^2.14.1",
     "normalize.css": "^4.1.1",
     "oauth-1.0a": "^1.0.1",
     "react": "^15.1.0",
