--- a/frontend/package.json
+++ b/frontend/package.json
@@ -111,6 +111,7 @@
     "react-bootstrap": "^0.30.0",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
+    "react-keydown": "^1.6.2",
     "react-redux": "^4.4.1",
     "react-redux-notifications": "^0.2.1",
     "react-router": "^2.0.1",
