--- a/frontend/package.json
+++ b/frontend/package.json
@@ -102,7 +102,7 @@
     "classnames": "^2.2.5",
     "install": "^0.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "json-server": "0.8.10",
+    "json-server": "^0.8.10",
     "lodash": "^4.12.0",
     "moment": "^2.14.1",
     "normalize.css": "^4.1.1",
