--- a/frontend/package.json
+++ b/frontend/package.json
@@ -109,6 +109,8 @@
     "oauth-1.0a": "^1.0.1",
     "react": "^15.1.0",
     "react-bootstrap": "^0.30.0",
+    "react-dnd": "^2.1.4",
+    "react-dnd-html5-backend": "^2.1.2",
     "react-dom": "^15.1.0",
     "react-helmet": "^3.1.0",
     "react-keydown": "^1.6.2",
