--- a/backend/package.json
+++ b/backend/package.json
@@ -19,9 +19,11 @@
     "mongoose": "^4.4.7",
     "morgan": "^1.7.0",
     "nodemon": "^1.9.1",
+    "oauth-1.0a": "^1.0.1",
     "passport": "^0.3.2",
     "passport-jwt": "^2.0.0",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "ytdl-core": ">=0.7.3"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.14.0",
